# avaliacao-checkpoint-Jason

my_project/: pubspec.yaml
my_project/android/app/src/main/: AndroidManifest.xml
my_project/lib/: main.dart
my_project/lib/src/Widget/: Product_card_widget.dart  hero_section_widget.dart  subscription_section_widget.dart
my_project/lib/src/models/: cart_item_model.dart  product_model.dart  rating_model.dart
my_project/lib/src/product/: product_service.dart
my_project/lib/src/screens/: cart_screen.dart  initial_screens.dart  login_screen.dart  product_detail_screen.dart
my_project/lib/src/services/: auth_service.dart  cart_service.dart  product_service.dart
my_project/lib/src/widgets/: custom_app_bar_widget.dart  hero_section_widget.dart  product_card_widget.dart  subscription_section_widget.dart
my_project/linux/: CMakeLists.txt
my_project/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
my_project/macos/Flutter/: GeneratedPluginRegistrant.swift
my_project/test/: widget_test.dart
my_project/web/: manifest.json
my_project/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
my_project/windows/runner/: Runner.rc  main.cpp
